fix: typo & removeMusic method